@@ -28,6 +28,7 @@ Revision:
 * #790: Adding new symlinks during upgrade (skenow)
 * #788: Setting control panel blocks to visible (skenow)
 * #791: Error during upgrade (dbversion 29) - alter table conf (skenow)
+* #794: HTMLPurifier options missing after upgrade
 
 === Impresscms 1.2 Beta ===
 Release date: 5 Sep 2009
